# cid-upct

./: .Rhistory 2.null  .gitattributes  .gitignore  .vimrc  Comando terminal R.txt  Dockerfile  Ejercicios Python.qmd  PYROS.txsprofile  README.md  custom-listings.tex  github-recovery-codes.txt  prueba.html  prueba.qmd  scalene_output.txt
.github/workflows/: docker-image.yml
.ipython/profile_default/: history.sqlite
.vim/: .netrwhist
.vim/UltiSnips/: tex.snippets
Apuntes LaTex/: Macros.tex  prueba.synctex  prueba.tex
Apuntes LaTex/1º Curso/AL/: AL 2.toc  AL.aux  AL.out  AL.tex  AL.toc
Apuntes LaTex/1º Curso/Cálculo I/: Calculo I 2.bcf  Calculo I 2.blg  Calculo I 2.out  Calculo I.aux  Calculo I.tex  Calculo I.toc
Apuntes LaTex/1º Curso/MD/: Apuntes de clase.aux  (+4 more)
Apuntes LaTex/AL/: AL.aux  AL.run.xml  AL.tex  AL.toc
Apuntes LaTex/Articulo/: Trabajo Investigación.qmd  Trabajo de Investigación.aux  Trabajo de Investigación.run.xml  Trabajo de Investigación.tex
Apuntes LaTex/Cálculo I/: Calculo I.out  Calculo I.run.xml  Calculo I.toc
Apuntes LaTex/FPAED/: FPAED.aux  FPAED.out  FPAED.run.xml  FPAED.synctex(busy)  FPAED.tex  FPAED.toc
Apuntes LaTex/MD/: Apuntes de clase.tex
Libro/: Los Elementales.aux  Los Elementales.synctex  Los Elementales.tex  Los Elementales.toc
Libro/Capitulo provisional/: Capitulo provisional.aux  Capitulo provisional.tex
Prácticas/3º Curso/2º Cuatrimestre/PPD/Entregables/Entregable_4/: Memoria_Entregable_4_Dask_FJMM.md  fcojavier_mercader_p4_ActOpc.ipynb  fcojavier_mercader_p4_dask.ipynb  fcojavier_mercader_p4_dask_category.ipynb  fcojavier_mercader_p4_dask_rapids.ipynb  pyproject.toml
Prácticas/3º Curso/2º Cuatrimestre/PPD/Practica_1/: calculate_stats  file1.txt  file2.txt  file3.txt  p1_1_profiling_performance_eval_unified_english.ipynb  p1_2_python_multiprocessing_unified_english.ipynb  profile.data  profile.txt  profiling_exercise.ipynb  profiling_script.py  profiling_script_scalene.py  pyproject.toml  script1.py  script2.py  script3.py
Prácticas/3º Curso/2º Cuatrimestre/PPD/Practica_3/: PPD_P2_PySpark.ipynb  docker-compose.yml  ej1_event_count_pyspark.py  p1_ecommerce.py  p2_ecommerce.py  p3_ecommerce.py  p4_ecommerce.py  pyproject.toml
Prácticas/3º Curso/2º Cuatrimestre/PPD/Practica_3/oct_full/: ej1_event_count_pyspark.py  p1_ecommerce.py  p2_ecommerce.py  p3_ecommerce.py  p4_ecommerce.py
Prácticas/Cálculo II/: Prácticas.ipynb  Prácticas.md  Prácticas.tex
Prácticas/MD/: Prácticas.ipynb  fun1var.py
Prácticas/prac_AL/: examen_enero_23.ipynb  examen_enero_24.html  examen_enero_24.ipynb  examen_junio_23.ipynb  examen_mayo_23.ipynb
auxil/: Ejercicios Tema 5.aux
vimfiles/UltiSnips/: tex.snippets
(+2926 files in other folders)
