[project]
name = "p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan M. Cebrian", email = "jm.cebriangonzalez@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.8.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numba>=0.61.0",
    "opencv-python>=4.11.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "py-spy>=0.4.1",
    "scalene>=2.0.1",
    "tqdm>=4.67.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "pytest>=9.0.2",
]
