[project]
name = "p3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan M. Cebrian", email = "jm.cebriangonzalez@gmail.com" }
]
requires-python = "==3.12.12"
dependencies = [
    "ipython==9.10.0",
    "joblib==1.5.3",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "numba==0.64.0",
    "opencv-python==4.13.0.92",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "py-spy==0.4.1",
    "scalene==2.1.4",
    "tqdm==4.67.3",
    "mrjob==0.7.4",
    "setuptools==82.0.0",
	"pyspark==4.1.1"
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel==7.2.0",
    "jupyterlab==4.5.4",
    "pytest==9.0.2",
]
