[project]
name = "p4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Juan M. Cebrian", email = "jm.cebriangonzalez@gmail.com" }]
requires-python = "==3.12.12"
dependencies = [
  "aiohttp>=3.13.3",
  "bokeh>=3.9.0",
  "dask>=2026.1.2",
  "dask-ml>=2025.1.0",
  "datashader>=0.18.2",
  "distributed>=2026.1.2",
  "graphviz>=0.21",
  "hvplot>=0.12.2",
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "jupyter-bokeh>=4.0.5",
  "pyarrow>=23.0.1",
  "requests>=2.32.5",
  "ruff>=0.15.12",
  "seaborn>=0.13.2",
  "shap>=0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["ipykernel==7.2.0", "jupyterlab==4.5.4", "pytest==9.0.2"]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = ["N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
